--- a/pages/js/ch1-9.html
+++ b/pages/js/ch1-9.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
     <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="stylesheet" href="../../styles/prism.css">
+    <script src="../../scripts/prism.js" defer></script>
     <script src="../../scripts/script.js" defer></script>
   </head>
 
@@ -34,7 +36,7 @@
           <p>Когда мы говорим об определении функции, мы подразумеваем создание именованного блока кода, который можно вызвать по необходимости. Функция в JavaScript определяется с помощью ключевого слова function, за которым следует имя функции, список параметров в круглых скобках, и тело функции, заключенное в фигурные скобки.</p>
           <p><strong>Синтаксис определения функции:</strong></p>
 <pre>
-  <code>
+  <code class="lang-js">
     function имяФункции(параметр1, параметр2, ...) {
     // Тело функции: код, который будет выполнен при вызове функции
     }
@@ -42,7 +44,7 @@
 </pre>    
           <p>Пример:</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function greet(name) {
       console.log("Привет, " + name + "!");
     }
@@ -53,13 +55,13 @@
           <p>После того, как функция определена, её можно вызвать в любом месте программы. Вызов функции осуществляется путем указания её имени и передачи необходимых аргументов.</p>
           <p><strong>Синтаксис вызова функции:</strong></p>
 <pre>
-  <code>
+  <code class="lang-js">
     имяФункции(аргумент1, аргумент2, ...);
   </code>
 </pre>
           <p>Пример:</p>
 <pre>
-  <code>
+  <code class="lang-js">
     greet("Алиса"); // "Привет, Алиса!"
     greet("Боб");   // "Привет, Боб!"
   </code>
@@ -69,7 +71,7 @@
           <p>Параметры — это переменные, определенные в объявлении функции, которые принимают значения, переданные при вызове функции. Аргументы — это конкретные значения, передаваемые функции во время её вызова. Функция может принимать любое количество параметров, и каждый из них получает значение из соответствующего аргумента.</p>
           <p>Пример:</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function add(a, b) {
       return a + b;
     }
@@ -83,7 +85,7 @@
           <p>Тело функции — это часть кода, которая выполняется, когда функция вызывается. Внутри тела функции можно использовать любые выражения и операторы, как и в обычном коде.</p>
           <p>Пример:</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function calculateArea(width, height) {
       let area = width * height;
       return area;
@@ -98,7 +100,7 @@
           <p>Функции могут возвращать результат своей работы с помощью оператора <code>return</code>. Возвращенное значение может быть использовано в других частях программы. Если функция не использует <code>return</code>, она возвращает <code>undefined</code> по умолчанию.</p>
           <p>Пример:</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function multiply(a, b) {
       return a * b;
     }
@@ -111,7 +113,7 @@
           <p>Одно из основных преимуществ функций заключается в том, что они позволяют избежать дублирования кода. Вместо того чтобы писать один и тот же код несколько раз, можно определить функцию и вызывать её в нужных местах.</p>
           <p>Пример:</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function greetUser(name) {
       console.log("Добро пожаловать, " + name + "!");
       console.log("Мы рады видеть вас снова, " + name + "!");
