--- a/pages/js/ch1-11.html
+++ b/pages/js/ch1-11.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
     <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="stylesheet" href="../../styles/prism.css">
+    <script src="../../scripts/prism.js" defer></script>
     <script src="../../scripts/script.js" defer></script>
   </head>
 
@@ -35,7 +37,7 @@
           <p>Давайте рассмотрим несколько примеров простых функций, которые выполняют базовые арифметические операции.</p>
           <p ><strong>Пример 1: Функция сложения</strong><br>Эта функция принимает два числа и возвращает их сумму.</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function add(a, b) {
       return a + b;
     }
@@ -46,7 +48,7 @@
 </pre>
           <p><strong>Пример 2: Функция вычитания</strong><br>Эта функция принимает два числа и возвращает разницу между ними.</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function subtract(a, b) {
       return a - b;
     }
@@ -57,7 +59,7 @@
 </pre>
           <p><strong>Пример 3: Функция умножения</strong><br>Функция, которая принимает два числа и возвращает их произведение.</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function multiply(a, b) {
       return a * b;
     }
@@ -68,7 +70,7 @@
 </pre>
           <p><strong>Пример 4: Функция деления</strong><br>Эта функция принимает два числа и возвращает результат их деления.</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function divide(a, b) {
       if (b !== 0) {
           return a / b;
@@ -88,7 +90,7 @@
           <p>Теперь, когда мы знаем, как писать простые функции для выполнения отдельных операций, можно создавать более сложные функции, которые будут сочетать несколько арифметических операций.</p>
           <p><strong>Пример 5: Функция расчета среднего значения</strong><br>Эта функция принимает три числа и возвращает их среднее арифметическое.</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function calculateAverage(a, b, c) {
       let sum = add(a, b) + c; // Используем ранее созданную функцию сложения
       return sum / 3;
@@ -101,7 +103,7 @@
           <p>Пример 6: Функция расчета процента от числа</p>
           <p>Функция принимает два числа: общее значение и процент, который нужно вычислить, и возвращает результат.</p>
 <pre>
-  <code>
+  <code class="lang-js">
     function calculatePercentage(total, percentage) {
       return (total * percentage) / 100;
     }
@@ -119,7 +121,7 @@
           </ul>
           <p><strong>Пример 7: Функция для вычисления остатка от деления</strong></p>
 <pre>
-  <code>
+  <code class="lang-js">
     function modulus(a, b) {
       return a % b;
     }
@@ -130,7 +132,7 @@
 </pre>
           <p><strong>Пример 8: Функция расчета периметра прямоугольника</strong></p>
 <pre>
-  <code>
+  <code class="lang-js">
     function calculatePerimeter(length, width) {
       return 2 * (length + width);
     }
@@ -141,7 +143,7 @@
 </pre>
           <p><strong>Пример 9: Функция для нахождения максимального числа</strong></p>
 <pre>
-  <code>
+  <code class="lang-js">
     function findMax(a, b, c) {
       return Math.max(a, b, c);
     }
