--- a/pages/js/ch1-6.html
+++ b/pages/js/ch1-6.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
     <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="stylesheet" href="../../styles/prism.css">
+    <script src="../../scripts/prism.js" defer></script>
     <script src="../../scripts/script.js" defer></script>
   </head>
 
@@ -38,7 +40,7 @@
           <li><strong>Переопределение</strong>: Переменные, объявленные с <code>var</code>, могут быть переопределены (объявлены заново) в одной и той же области видимости без ошибок.</li>
         </ul>
 <pre>
-  <code>
+  <code class="lang-js">
     console.log(name); // undefined
     var name = "Alice";
     console.log(name); // "Alice"
@@ -58,7 +60,7 @@
           <li><strong>Переопределение</strong>: Переменные, объявленные с <code>let</code>, не могут быть переопределены в той же области видимости. Если вы попытаетесь объявить переменную с тем же именем, это вызовет ошибку.</li>
         </ul>
 <pre>
-  <code>
+  <code class="lang-js">
     console.log(name); // Ошибка: переменная name недоступна до ее объявления
     let name = "Bob";
     
@@ -79,7 +81,7 @@
           <li><strong>Непереопределяемость</strong>: Переменные, объявленные с <code>const</code>, нельзя переопределить. Однако если переменная является объектом или массивом, то свойства объекта или элементы массива могут быть изменены.</li>
         </ul>
 <pre>
-  <code>
+  <code class="lang-js">
     const name = "Charlie";
     name = "David"; // Ошибка: попытка изменить значение константы
     const person = { name: "Alice", age: 30 };
