--- a/pages/js.html
+++ b/pages/js.html
@@ -122,7 +122,7 @@
             <p><strong>День 1-2:</strong></p>
             <li><a href="../pages/js/ch4-1.html">Введение в Document Object Model (DOM)</a></li>
             <li><a href="../pages/js/ch4-2.html">Поиск и манипуляция элементами DOM (getElementById, querySelector)</a></li>
-            <li>Изменение стилей и содержимого элементов</li>
+            <li><a href="../pages/js/ch4-3.html">Изменение стилей и содержимого элементов</a></li>
           </ul>
 
           <ul>
